Implemented dijkstras algorithm

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,38 @@
 [metadata]
-license_files = LICENSE.txt
+name = CTE
+description = A computational testing enviorment for my PhD.
+author = Martin Sig Nørbjerg
+license = MIT
+license_file = LICENSE
+platforms = unix, linux, osx, cygwin, win32
+classifiers =
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+
+[options]
+packages =
+   classes 
+   core 
+   scripts
+   utils
+install_requires =
+    numpy>=1.24
+python_requires = >=3.6
+package_dir =
+    =source
+zip_safe = no
+
+[options.extras_require]
+testing =
+    pytest>=6.0
+    pytest-cov>=2.0
+    flake8>=3.9
+    mypy>=0.91
+
+[flake8]
+ignore = E501, D401
+max-line-length = 160
