Began to work on a non-adaptive version of the genetic algorithm

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = CTE
-description = A computational testing enviorment for my PhD.
+description = A computational testing environment for my PhD.
 author = Martin Sig Nørbjerg
 license = MIT
 license_file = LICENSE
@@ -8,19 +8,20 @@ platforms = unix, linux, osx, cygwin, win32
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.6
-    Programming Language :: Python :: 3.7
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 packages =
    classes 
-   core 
+   library
+   misc
    utils
 install_requires =
     numpy>=1.24
-python_requires = >=3.6
+python_requires = >=3.9
 package_dir =
     =source
 zip_safe = no
